# MDAL

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CITATION  CMakeLists.txt  CTestConfig.cmake  Doxyfile  LICENSE  README.md  Toolchain-mingw32.cmake  code_of_conduct.md  test-le.ply  test_be.ply
external_drivers/: CMakeLists.txt  mdal_external_driver.h
external_drivers/dhi_dfs/: CMakeLists.txt  README.md  mdal_dhi_dfs.cpp  mdal_dhi_dfs.hpp  mdal_dhi_dfs2.cpp  mdal_dhi_dfs2.hpp  mdal_dhi_dfs2_external_driver.cpp  mdal_dhi_dfsu.cpp  mdal_dhi_dfsu.hpp  mdal_dhi_dfsu_external_driver.cpp
external_drivers/dhi_dfsu/: CMakeLists.txt  mdal_dhi_dfsu.cpp  mdal_dhi_dfsu.hpp  mdal_dhi_dfsu_external_driver.cpp
external_drivers/minimal_example/: CMakeLists.txt  mdalDummyExternalDriver.cpp
mdal/: CMakeLists.txt  mdal.cpp  mdal.h  mdal_data_model.cpp  mdal_data_model.hpp  mdal_date_time.cpp  mdal_date_time.hpp  mdal_datetime.cpp  mdal_datetime.hpp  mdal_defines.cpp  mdal_defines.hpp  mdal_driver_manager.cpp  mdal_driver_manager.hpp  mdal_loader.cpp  mdal_loader.hpp  mdal_logger.cpp  mdal_logger.hpp  mdal_memory_data_model.cpp  mdal_memory_data_model.hpp  mdal_utils.cpp  mdal_utils.hpp
mdal/api/: mdal.h
mdal/frmts/: FFileReader.h  SerafinReader.cpp  SerafinReader.h  crayfish_hec2d.cpp  mdal_2dm.cpp  mdal_2dm.hpp  mdal_3di.cpp  mdal_3di.hpp  mdal_ascii_dat.cpp  mdal_ascii_dat.hpp  mdal_binary_dat.cpp  mdal_binary_dat.hpp  mdal_cf.cpp  mdal_cf.hpp  mdal_driver.cpp  mdal_driver.hpp  mdal_dynamic_driver.cpp  mdal_dynamic_driver.hpp  mdal_esri_tin.cpp  mdal_esri_tin.hpp  mdal_flo2d.cpp  mdal_flo2d.hpp  mdal_gdal.cpp  mdal_gdal.hpp  mdal_gdal_grib.cpp  mdal_gdal_grib.hpp  mdal_gdal_netcdf.cpp  mdal_gdal_netcdf.hpp  mdal_h2i.cpp  mdal_h2i.hpp  mdal_hdf5.cpp  mdal_hdf5.hpp  mdal_hec2d.cpp  mdal_hec2d.hpp  mdal_mike21.cpp  mdal_mike21.hpp  mdal_netcdf.cpp  mdal_netcdf.hpp  mdal_ply.cpp  mdal_ply.hpp  (+20 more)
mdal/frmts/libplyxx/: LICENSE.md  libplyxx.cpp  libplyxx.h  libplyxx_internal.h  textio.h
tests/: CMakeLists.txt  GTestCMakeLists.in  mdal_testutils.cpp  mdal_testutils.hpp  test_2dm.cpp  test_3di.cpp  test_api.cpp  test_ascii_dat.cpp  test_basement.cpp  test_binary_dat.cpp  test_dhi_driver.cpp  test_dynamic_driver.cpp  test_esri_tin.cpp  test_flo2d.cpp  test_gdal_grib.cpp  test_gdal_netcdf.cpp  test_grib.cpp  test_h2i.cpp  test_hec2d.cpp  test_mdal_date_time.cpp  test_mdal_utils.cpp  test_mesh_read.cpp  test_mike21.cpp  test_ply.cpp  test_selafin.cpp  test_sww.cpp  test_tuflowfv.cpp  test_ugrid.cpp  test_xdmf.cpp  test_xmdf.cpp  test_xms_tin.cpp  testmdalcore.cpp
tests/data/2dm/: M01_5m_002.2dm  lines.2dm  mesh_with_numbering_gaps.2dm  multi_material.2dm  quad_and_line.2dm  quad_and_triangle_large_coordinates.2dm  quad_and_triangle_scientific.2dm  regular_grid.2dm  triangleE6T.2dm  unordered_ids.2dm  unsupported_elements.2dm
tests/data/3di/1d_loon/: results_3di.nc
tests/data/3di/2d_16cells7steps/: results_3di.nc
tests/data/3di/2d_4cells301steps/: results_3di.nc
tests/data/3di/2d_groundwater/: results_3di.nc
tests/data/binary_dat/: inactiveFlagMesh.2dm
tests/data/datetime/: julianDay.txt
tests/data/dhi/: DFS2-TimeVarying-Small.dfs2  DFSU-3D-Small.dfsu  OdenseHD2D.dfsu  OdenseHD3D.dfsu  Oresund3DSigmaZ.dfsu  OresundHD.dfs2  OresundHD.dfsu  small.dfsu
tests/data/dynamic_driver/: mesh_1.msh
tests/data/esri_tin/: dem.tif  dem_with_holes.tif  islands.tif  mesh_simple.tif  mesh_simple2.tif
tests/data/esri_tin/dem_with_holes/: metadata.xml  tdenv9.adf  tedg.adf  teval.adf  thul.adf  tmsk.adf  tmsx.adf  tnod.adf  tnodinfo.adf  tnxy.adf  tnz.adf
tests/data/esri_tin/dems.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000003.gdbtablx  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000004.spx  a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000005.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.CatRelsByType.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000006.gdbtablx  a00000009.gdbtable  a0000000a.gdbtable  a0000000b.gdbtable  a0000000c.gdbtable  a0000000c.gdbtablx  a0000000d.gdbtable  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000f.gdbtable  a00000010.gdbtable  a00000011.gdbtable  a00000011.gdbtablx  a00000012.gdbtable  a00000013.gdbtable  a00000014.gdbtable  a00000015.gdbtable  a00000016.gdbtable  (+33 more)
tests/data/esri_tin/islands/: metadata.xml  tdenv9.adf  tedg.adf  teval.adf  thul.adf  tmsk.adf  tmsx.adf  tnod.adf  tnodinfo.adf  tnxy.adf  tnz.adf
tests/data/esri_tin/mesh_simple/: metadata.xml  tdenv9.adf  tedg.adf  teval.adf  (+6 more)
tests/data/grib/: Madagascar.wave.7days.grb  Madagascar.wave.7days.grb.aux.xml  Madagascar.wind.7days.grb  saga_flow_without_nodata.grb  saga_flow_without_nodata.grb.aux.xml  wind_only_u_component.grib
tests/data/mike21/: not_a_mesh_file.mesh  odense_rough.mesh  odense_rough_comparison.mesh  odense_rough_quads.mesh  odense_rough_quads_comparion.mesh  small.mesh  wrong_element_line_format.mesh  wrong_element_type.mesh  wrong_face_count.mesh  wrong_vertex_count.mesh
tests/data/netcdf/: indonesia_nc3.nc  indonesia_nc4.nc  nonConstitentDataset.nc
tests/data/ply/: all_features.ply  all_features_binary.ply  all_features_binary_be.ply  all_features_inv.ply  test_mesh.ply  test_precision.ply
tests/data/slf/: README.TXT  example.slf  example_res_fr.slf  geo_Fudaa_doublePrecision.geo  init_Fudaa_simplePrecision.ser  test_sd_6.slf
tests/data/tmp/: .gitignore
tests/data/tuflowfv/: trap_steady_05_3D.nc
tests/data/ugrid/: TINUGRID.tin
tests/data/xmdf/: custom_groups.xmdf  regular_grid.xmdf
tests/data/xms_tin/: paraboloid.m.tin
tests/unittests/: mdal_unittests.cpp  test_mdal_datetime.cpp  test_mdal_utils.cpp
tools/: CMakeLists.txt  mdal_translate.cpp  mdalinfo.cpp
tools/externaldriver/: CMakeLists.txt  mdalDummyExternalDriver.cpp  mdal_external_driver.h
(+290 files in other folders)
