SET(MDAL_EXTERNAL_DRIVER_HEADER
    mdal_external_driver.h)

IF (ENABLE_TESTS)
  SET(MDAL_EXTERNAL_DRIVERS_LIB
    mdal_dummy_external_driver)

  SET(MDAL_DUMMY_DRIVER_SRC
    minimal_example/mdalDummyExternalDriver.cpp)

  ADD_LIBRARY(mdal_dummy_external_driver SHARED
    ${MDAL_DUMMY_DRIVER_SRC})
ENDIF (ENABLE_TESTS)

FOREACH(DRIVER_LIB ${MDAL_EXTERNAL_DRIVERS_LIB})

  TARGET_INCLUDE_DIRECTORIES(${DRIVER_LIB}
    PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:include>
  )
ENDFOREACH(DRIVER_LIB ${MDAL_EXTERNAL_DRIVERS_LIB})

