SET(MDAL_EXTERNAL_DRIVER_HEADER
    ${CMAKE_CURRENT_SOURCE_DIR})

IF (ENABLE_TESTS)
  SET(MDAL_EXTERNAL_DRIVERS_LIB
    mdal_dummy_external_driver)

  SET(MDAL_DUMMY_DRIVER_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/minimal_example/mdalDummyExternalDriver.cpp)

  ADD_LIBRARY(mdal_dummy_external_driver SHARED
    ${MDAL_DUMMY_DRIVER_SRC})
ENDIF (ENABLE_TESTS)

IF (BUILD_EXTERNAL_DRIVERS)
IF (MSVC)
  SET (EXTERNAL_DRIVER_DHI_DFSU TRUE CACHE BOOL "Build dhi unstructured mesh driver")
  IF(EXTERNAL_DRIVER_DHI_DFSU)
 
	SET(MDAL_EXTERNAL_DRIVERS_LIB ${MDAL_EXTERNAL_DRIVERS_LIB}
		mdal_dhi_dfsu_driver)

	SET(MDAL_DHI_DFSU_DRIVER_SRC
		${CMAKE_CURRENT_SOURCE_DIR}/dhi_dfsu/mdal_dhi_dfsu_external_driver.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/dhi_dfsu/mdal_dhi_dfsu.cpp)

	ADD_LIBRARY(mdal_dhi_dfsu_driver SHARED
		${MDAL_DHI_DFSU_DRIVER_SRC})
		
  ENDIF(EXTERNAL_DRIVER_DHI_DFSU)
ENDIF (MSVC)
ENDIF (BUILD_EXTERNAL_DRIVERS)

FOREACH(DRIVER_LIB ${MDAL_EXTERNAL_DRIVERS_LIB})

  TARGET_INCLUDE_DIRECTORIES(${DRIVER_LIB}
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
  )
ENDFOREACH(DRIVER_LIB ${MDAL_EXTERNAL_DRIVERS_LIB})

