SET(MDAL_EXTERNAL_DRIVER_HEADER_DIRECTORY 
	${CMAKE_CURRENT_SOURCE_DIR})

IF (ENABLE_TESTS)
  ADD_SUBDIRECTORY(minimal_example)
ENDIF (ENABLE_TESTS)

IF (BUILD_EXTERNAL_DRIVERS)
IF (MSVC)
  SET (EXTERNAL_DRIVER_DHI_DFSU TRUE CACHE BOOL "Build dhi unstructured mesh driver")
  IF(EXTERNAL_DRIVER_DHI_DFSU)
 
	ADD_SUBDIRECTORY(dhi_dfsu)
		
  ENDIF(EXTERNAL_DRIVER_DHI_DFSU)
ENDIF (MSVC)
ENDIF (BUILD_EXTERNAL_DRIVERS)


