SET(MDALINFO_SOURCES 
  mdalinfo.cpp
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}/mdal
)

ADD_EXECUTABLE(mdalinfo ${MDALINFO_SOURCES})
TARGET_LINK_LIBRARIES(mdalinfo mdal)
TARGET_INCLUDE_DIRECTORIES(mdalinfo PUBLIC mdal)

INSTALL(TARGETS mdalinfo RUNTIME DESTINATION bin)
