SET(MDALINFO_SOURCES 
  mdalinfo.cpp
)

SET(MDAL_TRANSLATE_SOURCES
  mdal_translate.cpp
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/mdal
  ${CMAKE_CURRENT_BINARY_DIR}
)

ADD_EXECUTABLE(mdalinfo ${MDALINFO_SOURCES})
ADD_EXECUTABLE(mdal_translate ${MDAL_TRANSLATE_SOURCES})
TARGET_LINK_LIBRARIES(mdalinfo mdal)
TARGET_INCLUDE_DIRECTORIES(mdalinfo PUBLIC mdal)
TARGET_LINK_LIBRARIES(mdal_translate mdal)
TARGET_INCLUDE_DIRECTORIES(mdal_translate PUBLIC mdal)

INSTALL(TARGETS mdalinfo RUNTIME DESTINATION bin)
INSTALL(TARGETS mdal_translate RUNTIME DESTINATION bin)
