CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(mdal_dummy_external_driver)

IF (MDAL_EXTERNAL_DRIVER_HEADER_DIRECTORY)
	SET (MDAL_HEADER ${MDAL_EXTERNAL_DRIVER_HEADER_DIRECTORY})
ELSE (MDAL_EXTERNAL_DRIVER_HEADER_DIRECTORY)
	SET(MDAL_HEADER ./.. CACHE PATH "MDAL header directory")
ENDIF (MDAL_EXTERNAL_DRIVER_HEADER_DIRECTORY)

SET(MDAL_EXTERNAL_DRIVERS_LIB ${MDAL_EXTERNAL_DRIVERS_LIB}
		mdal_dummy_driver)

SET(MDAL_DHI_DFSU_DRIVER_SRC
		${CMAKE_CURRENT_SOURCE_DIR}/mdalDummyExternalDriver.cpp)

ADD_LIBRARY(mdal_dummy_driver SHARED
		${MDAL_DHI_DFSU_DRIVER_SRC})
		
TARGET_INCLUDE_DIRECTORIES(mdal_dummy_driver
    PRIVATE
    ${MDAL_HEADER})
  