SET(MDAL_DUMMY_EXTERNAL_DRIVER
    mdalDummyExternalDriver.cpp)
	
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_BINARY_DIR}
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}
)


ADD_LIBRARY(mdal_dummy_external_driver SHARED 
${EXTERNAL_DRIVER__HEADER}
${MDAL_DUMMY_EXTERNAL_DRIVER}
)

